# billchemy

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: linter.yml  test.yml
scripts/: convert_to_pdf.py
src/: dependencies.py
src/adapters/controllers/: templates_http.py
src/adapters/invoices/: pdf_generator.py  template_render.py  template_repository.py
src/app/: main.py
src/domain/entities/: invoice.py
src/domain/entities/raw/: invoice basic information.json
src/domain/invoices/entities/: invoice.py
src/domain/invoices/interfaces/: pdf_generator.py  template_render.py  template_repository.py
src/raw/rendered/: rendered_AB23432.docx  rendered_AB234323.docx  rendered_ABC12432.docx  rendered_ABC124323.docx
src/raw/templates/: Pagare 13332.docx
src/schemas/: invoice_schema.py
src/tests/adapters/invoices/: test_pdf_generator.py  test_template_render.py  test_template_repository.py
src/tests/domain/invoices/: test_invoice_entity.py
src/tests/raw/templates/: template2.docx
src/tests/schemas/: test_invoice_schema.py
src/tests/usecases/invoices/: test_generate_pdf.py  test_list_template.py  test_save_template.py
src/usecases/invoices/: generate_pdf.py  list_template.py  save_template.py
src/utils/: formatters.py  mappers.py
