[project]
name = "billchemy"
version = "0.1.0"
description = "generacion de documentos de facturacion basado en templates"
authors = [
    {name = "juanj72",email = "juan.jara@campusucc.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
