[project]
name = "billchemy"
version = "0.1.0"
description = "generacion de documentos de facturacion basado en templates"
authors = [
    {name = "juanj72",email = "juan.jara@campusucc.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "docxtpl (>=0.20.0,<0.21.0)",
    "mammoth (>=1.9.0,<2.0.0)",
    "weasyprint (>=65.1,<66.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
